--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -115,7 +115,7 @@
 		<tr:iterator id="iterCreatorOrganisationAuthors" var="creatorBean" value="#{EditItem.creatorCollection.creatorManager.objectDM}" rows="0">
 			<h:panelGroup layout="block" styleClass="suggestAnchor xSmall_marginLExcl">
 				<%-- Creator person family name, Creator person given name --%>
-				<h:panelGroup layout="block" styleClass="full_area0 endline" rendered="#{creatorBean.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
+				<h:panelGroup layout="block" styleClass="full_area0 endline personArea" rendered="#{creatorBean.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 clear">&nbsp;</span>
 					<%-- Creator role --%>
 					<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select replace" value="#{creatorBean.creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
@@ -124,11 +124,11 @@
 					<h:selectOneMenu id="selcreatorTypeString" value="#{creatorBean.creator.type}" styleClass="small_select" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}" onchange="$('.hiddenButtonPasteOrganizations').click();">
 						<f:selectItems value="#{creatorBean.creatorTypes}"/>
 					</h:selectOneMenu>
-					<h:inputText id="inpcreator_persons_person_family_name_optional" readonly="#{creatorBean.identifierValue != null}" styleClass="large_txtInput personSuggest familyName" value="#{creatorBean.creator.person.familyName}" rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}"/>
-					<h:inputText id="inppersons_person_given_name_optional" readonly="#{creatorBean.identifierValue != null}" styleClass="large_txtInput givenName" value="#{creatorBean.creator.person.givenName}"/>
-					<h:inputText id="inppersons_person_ous_optional" styleClass="xSmall_txtInput" value="#{creatorBean.ouNumbers}"/>
-					<h:inputText id="inppersons_identifier" styleClass="noDisplay personIdentifier" value="#{creatorBean.identifierValue}"/>
+					<h:inputText id="inpcreator_persons_person_family_name_optional" readonly="#{creatorBean.identifierValue != null}" styleClass="large_txtInput personSuggest familyName" value="#{creatorBean.creatorPersonFamilyName}" rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}"/>
+					<h:inputText id="inppersons_person_given_name_optional" readonly="#{creatorBean.identifierValue != null}" styleClass="large_txtInput givenName" value="#{creatorBean.creatorPersonGivenName}"/>
 					<h:inputText id="inpcreator_hidden_organizations" styleClass="noDisplay organizationPasteField" value="#{creatorBean.autoPasteValue}"/>
+					<h:inputText id="inppersons_person_ous_optional" styleClass="xSmall_txtInput ouNumber" value="#{creatorBean.ouNumbers}"/>
+					<h:inputText id="inppersons_identifier" styleClass="noDisplay personIdentifier" value="#{creatorBean.identifierValue}"/>
 					<h:outputLink styleClass="small_area0 authorCard authorLink" value="#{creatorBean.identifierValue}" rendered="#{creatorBean.identifierValue != null}" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:outputLink>
 					<h:panelGroup rendered="#{creatorBean.identifierValue == null}" styleClass="xSmall_area0 authorLink">
 					</h:panelGroup>
@@ -150,7 +150,7 @@
 					<h:inputText id="inpcreator_organization_name_optional" styleClass="huge_txtInput organizationSuggest organizationName xSmall_marginRExcl" value="#{creatorBean.creator.organization.name.value}" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}"/>
 					<h:inputText id="inpcreator_organization_identifier_optional" styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creatorBean.creator.organization.identifier}"/>
 				
-					<h:outputLink styleClass="small_area0 ouCard ouLink" rendered="#{creatorBean.creator.organization.identifier != null}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creatorBean.creator.organization.identifier}', 980, 400, 'Details');return false"></h:outputLink>
+					<h:outputLink styleClass="small_area0 ouCard ouLink" rendered="#{creatorBean.creator.organization.identifier != null and creatorBean.creator.organization.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creatorBean.creator.organization.identifier}', 980, 400, 'Details');return false"></h:outputLink>
 						<h:panelGroup rendered="#{creatorBean.creator.organization.identifier == null}" styleClass="xSmall_area0 ouLink">
 						</h:panelGroup>
 					<h:panelGroup styleClass="xSmall_marginLExcl">
