--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -87,10 +87,10 @@
 					<span class="large_area0 clear">&nbsp;</span>
 					<%-- Creator role --%>
 					<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select replace" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
-						<f:selectItems value="#{EditItem.creatorRoles}"/>
+						<f:selectItems value="#{EditItemSessionBean.creatorRoles}"/>
 					</h:selectOneMenu>
 					<h:selectOneMenu id="selcreatorTypeString" value="#{creator.typeString}" styleClass="small_select" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}" onchange="$('.hiddenButtonPasteOrganizations').click();">
-						<f:selectItems value="#{EditItem.creatorTypes}"/>
+						<f:selectItems value="#{EditItemSessionBean.creatorTypes}"/>
 					</h:selectOneMenu>
 					<h:inputText id="inpcreator_persons_person_family_name_optional" readonly="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" styleClass="large_txtInput personSuggest familyName" value="#{creator.person.familyName}" rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}"/>
 					<h:inputText id="inppersons_person_given_name_optional" readonly="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" styleClass="large_txtInput givenName" value="#{creator.person.givenName}"/>
@@ -109,10 +109,10 @@
 					<%-- Creator role --%>
 					<span class="large_area0">&nbsp;</span>
 					<h:selectOneMenu id="selCreatorOrgRoleString" styleClass="small_select replace" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
-						<f:selectItems value="#{EditItem.creatorRoles}"/>
+						<f:selectItems value="#{EditItemSessionBean.creatorRoles}"/>
 					</h:selectOneMenu>
 					<h:selectOneMenu id="selcreatorOrgTypeString" styleClass="small_select" value="#{creator.typeString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}" onchange="$('.hiddenButtonPasteOrganizations').click();">
-						<f:selectItems value="#{EditItem.creatorTypes}"/>
+						<f:selectItems value="#{EditItemSessionBean.creatorTypes}"/>
 					</h:selectOneMenu>
 					<h:inputText id="inpcreator_organization_name_optional" styleClass="huge_txtInput organizationSuggest organizationName xSmall_marginRExcl" value="#{creator.organization.name.value}" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}"/>
 					<h:inputText id="inpcreator_organization_identifier_optional" styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creator.organization.identifier}"/>
