View withdrawn item
Former-commit-id: 17456d3291e6df14bc889321283b1682adabfd47

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/WithdrawnGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/WithdrawnGroup.jspf
@@ -59,39 +59,71 @@
 		</div>
 
 <%-- Creators --%>
-		<div class="free_area0 endline itemLine">
-			<b class="xLarge_area0 endline labelLine">
+		<div class="free_area0 endline itemLine noTopBorder">
+			<b id="lblViewItemFull_lblCreators" class="xLarge_area0_p8 endline labelLine">
 				<sup>&nbsp;</sup><h:outputText value="#{lbl.ViewItemFull_lblCreators}"/><span class="noDisplay">: <br /></span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" binding="#{ViewItemFull.creatorPersonsIterator}" varStatus="index">
-					<h:panelGroup styleClass="free_area0 creator">
-						<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
-						<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
-							&#160;
-							<h:outputLink id="lnkCreatorPersonPortfolioLinkWithdrawn" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank"><img src="images/researcher_portfolio.gif" border="0"/></h:outputLink>
+				<span class="free_area0 authorsGroup">
+					<!-- Display {ViewItemFull.defaultSize} creators by default -->
+					<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" rows="#{ViewItemFull.defaultSize}" varStatus="creatorStatus"> 
+						<h:panelGroup id="txtCreatorPersonFormattedDisplay" styleClass="free_area0 creator clear">
+							<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
+							<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
+								&#160;
+								<h:outputLink id="lnkCreatorPersonPortfolioLink" styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+							</h:panelGroup>
 						</h:panelGroup>
+						<br/>
+					</tr:iterator>
+					
+					<!-- Hidden creators, visible after clicking on more -->
+					<tr:iterator var="creatorPerson" value="#{ViewItemFull.creatorArray}" varStatus="creatorStatus" first="#{ViewItemFull.defaultSize}" rows="#{ViewItemFull.creatorArraySize}" rendered="#{ViewItemFull.creatorArraySize > ViewItemFull.defaultSize}"> 
+						<h:panelGroup id="txtCreatorPersonFormattedHidden" styleClass="free_area0 creator creatorHidden tiny_marginRIncl">
+							<h:outputText value="#{creatorPerson.formattedDisplay}" escape="false"/>
+							<h:panelGroup rendered="#{creatorPerson.portfolioLink != null}">
+								&#160;
+								<h:outputLink id="lnkCreatorPersonPortfolioLink" styleClass="authorCard" value="#{creatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+							</h:panelGroup>
+						</h:panelGroup>
+					</tr:iterator>
+					
+					<h:panelGroup rendered="#{ViewItemFull.creatorArraySize > ViewItemFull.defaultSize}">
+						<a class="large_area0 tiny_marginRIncl showMoreAuthors" ><h:outputText value="#{lbl.adv_search_btShowMore}" /></a>
 					</h:panelGroup>
-					<h:outputText value="<br />" escape="false"/>
-				</tr:iterator>
-				<tr:iterator var="creatorOrganization" value="#{ViewItemFull.creatorOrganizationsArray}" binding="#{ViewItemFull.creatorOrganizationsIterator}" varStatus="index">
-					<h:panelGroup styleClass="free_area0 creator">
-						<h:outputText value="#{creatorOrganization.organizationName}"/>
-					</h:panelGroup>
-					<h:outputText value="<br />" escape="false"/>
-				</tr:iterator>		
+					
+					<tr:iterator var="creatorOrganization" value="#{ViewItemFull.creatorOrganizationsArray}" >
+						<h:panelGroup styleClass="free_area0 creator clear">
+							<h:panelGroup id="txtCreatorOrganizationOrganizationName">
+								<h:outputText value="#{creatorOrganization.organizationName}"/>
+							</h:panelGroup>
+							&#160;
+							<h:outputLink id="lnkCreatorOrganizationLink" styleClass="ouCard" rendered="#{creatorOrganization.identifier != null and creatorOrganization.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creatorOrganization.identifier}', 980, 400, 'Details');return false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+						</h:panelGroup>
+						<br/>
+					</tr:iterator>
+				</span>		
 			</span>
 		</div>
 
 <%-- Affiliations --%>
 		<div class="free_area0 endline itemLine">
-			<b class="xLarge_area0 endline labelLine">
+			<b id="lblViewItemFull_lblAffiliations" class="xLarge_area0_p8 endline labelLine">
 				<h:outputText value="#{lbl.ViewItemFull_lblAffiliations}"/><span class="noDisplay">: <br /></span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<tr:iterator var="creatorAffiliation" value="#{ViewItemFull.organizationList}" binding="#{ViewItemFull.creatorAffiliationsIterator}" varStatus="index">
+				<tr:iterator var="creatorAffiliation" value="#{ViewItemFull.organizationList}" rows="0">
 					<h:panelGroup styleClass="xTiny_area0 endline"><h:outputText value="#{creatorAffiliation.position}"/></h:panelGroup>
-					<h:panelGroup styleClass="free_area0 affiliation"><h:outputText value="#{creatorAffiliation.organizationName}, #{creatorAffiliation.organizationAddress}, #{creatorAffiliation.organizationIdentifier}"/></h:panelGroup>
+					<h:panelGroup id="txtCreatorAffiliation" styleClass="free_area0 affiliation">
+						<h:outputText value="#{creatorAffiliation.organizationName}"/>
+						<h:outputText value=", #{creatorAffiliation.organizationAddress}" rendered="#{not empty creatorAffiliation.organizationAddress}"/>
+						<h:outputText value=", #{creatorAffiliation.organizationIdentifier}" rendered="#{not empty creatorAffiliation.organizationIdentifier}"/>
+						
+						<h:panelGroup rendered="#{creatorAffiliation.hasOrganizationalIdentifier}">
+							&#160;
+							<h:outputLink id="lnkAffiliationDetail" value="" styleClass="ouCard" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{creatorAffiliation.organizationIdentifier}', 980, 400, 'Details');return false" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+						</h:panelGroup>
+					</h:panelGroup>
 					<h:outputText value="<br />" escape="false"/>
 				</tr:iterator>
 			</span>
