--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedIn.jspf
@@ -1,47 +1,51 @@
+
 <jsp:scriptlet>
-            /* 
-            CDDL HEADER START
+/* 
+CDDL HEADER START
 
-            The contents of this file are subject to the terms of the
-            Common Development and Distribution License, Version 1.0 only
-            (the "License"). You may not use this file except in compliance
-            with the License.
+The contents of this file are subject to the terms of the
+Common Development and Distribution License, Version 1.0 only
+(the "License"). You may not use this file except in compliance
+with the License.
 
-            You can obtain a copy of the license at license/ESCIDOC.LICENSE
-            or http://www.escidoc.de/license.
-            See the License for the specific language governing permissions
-            and limitations under the License.
+You can obtain a copy of the license at license/ESCIDOC.LICENSE
+or http://www.escidoc.de/license.
+See the License for the specific language governing permissions
+and limitations under the License.
 
-            When distributing Covered Code, include this CDDL HEADER in each
-            file and include the License file at license/ESCIDOC.LICENSE.
-            If applicable, add the following below this CDDL HEADER, with the
-            fields enclosed by brackets "[]" replaced with your own identifying
-            information: Portions Copyright [yyyy] [name of copyright owner]
+When distributing Covered Code, include this CDDL HEADER in each
+file and include the License file at license/ESCIDOC.LICENSE.
+If applicable, add the following below this CDDL HEADER, with the
+fields enclosed by brackets "[]" replaced with your own identifying
+information: Portions Copyright [yyyy] [name of copyright owner]
 
-            CDDL HEADER END
+CDDL HEADER END
 
 
-            Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Förderung der Wissenschaft e.V.
-            All rights reserved. Use is subject to license terms.
-             */
+Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
+für wissenschaftlich-technische Information mbH and Max-Planck-
+Gesellschaft zur Förderung der Wissenschaft e.V.
+All rights reserved. Use is subject to license terms.
+*/
 </jsp:scriptlet>
+
 <jsp:directive.page pageEncoding="UTF-8" />
+
 <!-- HOMEPAGE ENGLISH VERSION -->
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='en'}">
+<h:panelGroup rendered="#{PubManSessionBean.locale =='en'}">
 	<h2>
 		WELCOME TO PUBMAN - <br/>WHAT DO YOU WANT TO WORK ON TODAY?
 	</h2>
 	<br/>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='en' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='en' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon submIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<h2>Submission</h2>      	
-          <b>Enter a new Publication to PubMan?</b><br/>
+	<span class="xDouble_area0">
+		<h2>Submission</h2>
+		<b>Enter a new Publication to PubMan?</b>
+		<br/>
 	   ... by using the 
 		<h:commandLink id="lnkEasySubmission_en" title="#{tip.submission_lnkNewSubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
@@ -56,15 +60,15 @@
 		<h:commandLink id="lnkNewSubmission_en" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.Home_Link_FullSub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
-    </span>
-	</h:panelGroup>
-
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='en' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+	</span>
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='en' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon myItemsIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<br/>
+	<span class="xDouble_area0">
+		<br/>
 		<h2>My Items</h2>
 		...finish your data 
 		<h:outputLink id="lnkSubmissionsOrCheck" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
@@ -72,14 +76,14 @@
 		</h:outputLink>
 		if your items have been already realeased to the public.
 	</span>
-	</h:panelGroup>
-
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='en' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='en' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon qaWSIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<br/>
+	<span class="xDouble_area0">
+		<br/>
 		<h2>QA Workspace</h2>
 		... 		
 		<h:outputLink id="lnkModerateOrEdit" value="#{ApplicationBean.appContext}QAWSPage.jsp">
@@ -87,35 +91,38 @@
 		</h:outputLink>
 		items entered for your context.
 	</span>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='en'}">
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='en'}">
 	<span class="full_area0 ">
-	<br/>
+		<br/>
 		<h2>
 			Help and further information
 		</h2>
 		<b>Helpful videos</b>
 		<ul>
-			<li>video on <a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">how to submit data</a></li>
-			<li>video on <a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">usage of your workspaces</a></li>
+			<li>video on <a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">how to submit data</a>
+			</li>
+			<li>video on <a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">usage of your workspaces</a>
+			</li>
 		</ul>
 	</span>
-	</h:panelGroup>
+</h:panelGroup>
 
 <!-- HOMEPAGE GERMAN VERSION -->
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='de'}">
+<h:panelGroup rendered="#{PubManSessionBean.locale =='de'}">
 	<h2>
 		WILLKOMMEN BEI PUBMAN - <br/>WAS M&Ouml;CHTEN SIE HEUTE TUN?
 	</h2>
 	<br/>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='de' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='de' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon submIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<h2>Dateneingabe</h2>      	
-          <b>Wollen Sie eine neue Publikation eingeben?</b><br/>
+	<span class="xDouble_area0">
+		<h2>Dateneingabe</h2>
+		<b>Wollen Sie eine neue Publikation eingeben?</b>
+		<br/>
 	   ... benutzen Sie die 
 		<h:commandLink id="lnkEasySubmission_de" title="#{tlt.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
@@ -130,14 +137,14 @@
 		<h:commandLink id="lnkNewSubmission_de" title="#{tip.submission_lnkNewSubmission}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.Home_Link_FullSub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
-    </span>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='de' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+	</span>
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='de' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon myItemsIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<br/>
+	<span class="xDouble_area0">
+		<br/>
 		<h2>Meine Datens&auml;tze</h2>
 		...beenden Sie Ihre 
 		<h:outputLink id="lnkDateneingabeOderPruefen" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
@@ -145,14 +152,14 @@
 		</h:outputLink>
 		Sie ob Ihre Items bereits ver&ouml;ffentlicht wurden.
 	</span>
-	</h:panelGroup>
-
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='de' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='de' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon qaWSIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<br/>
+	<span class="xDouble_area0">
+		<br/>
 		<h2>QA Bereich</h2>
 		... 		
 		<h:outputLink id="lnkUeberpruefenOderEditieren" value="#{ApplicationBean.appContext}QAWSPage.jsp">
@@ -160,35 +167,37 @@
 		</h:outputLink>
 		Sie Items aus Ihrem Kontext.
 	</span>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='de'}">
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='de'}">
 	<span class="full_area0 ">
-	<br/>
+		<br/>
 		<h2>
 			Hilfe und weitere Informationen:
 		</h2>
 		<b>N&uuml;tzliche Videos</b>
 		<ul>
-			<li>video on <a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">wie gebe ich Daten ein</a></li>
-			<li>video on <a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">wie nutze ich meine Arbeitsbereiche</a></li>
+			<li>video on <a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">wie gebe ich Daten ein</a>
+			</li>
+			<li>video on <a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">wie nutze ich meine Arbeitsbereiche</a>
+			</li>
 		</ul>
 	</span>
-	</h:panelGroup>
+</h:panelGroup>
 
 <!-- HOMEPAGE JAPANESE VERSION -->
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='ja'}">
+<h:panelGroup rendered="#{PubManSessionBean.locale =='ja'}">
 	<h2>
-		PubMan へようこそ <!-- -<br/>今日は何をしましょうか？ -->
-	</h2>
+		PubMan へようこそ <!-- -<br/>今日は何をしましょうか？ --></h2>
 	<br/>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='ja'  and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='ja' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon submIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<h2>新規登録</h2>      	
-          <b>文献資料をPubManへ登録する</b><br/>
+	<span class="xDouble_area0">
+		<h2>新規登録</h2>
+		<b>文献資料をPubManへ登録する</b>
+		<br/>
 	   ... 
 		<h:commandLink id="lnkEasySubmission_jp" title="#{tlt.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
 			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
@@ -203,15 +212,15 @@
 		<h:commandLink id="lnkNewSubmission_jp" title="#{lbl.Home_Link_FullSub}" action="#{CreateItem.newSubmission}" immediate="true">
 			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
 		</h:commandLink>
-    </span>
-	</h:panelGroup>
-
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='ja' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+	</span>
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='ja' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon myItemsIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<br/>
+	<span class="xDouble_area0">
+		<br/>
 		<h2>登録資料一覧</h2>
 		...登録一覧から自身の登録分を
 		<h:outputLink id="lnkJapan1" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
@@ -219,14 +228,14 @@
 		</h:outputLink>。
 		登録済みで未公開状態の資料を公開する。
 	</span>
-	</h:panelGroup>
-
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='ja' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='ja' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
 	<span class="small_area0">
 		<span class="big_imgArea startPageIcon qaWSIcon">&#160;</span>
 	</span>
-	<span class="xDouble_area0"> 
-	<br/>
+	<span class="xDouble_area0">
+		<br/>
 		<h2>管理画面</h2>
 		... 登録資料の
 		<h:outputLink id="lnkJapan2" value="#{ApplicationBean.appContext}QAWSPage.jsp">
@@ -234,17 +243,99 @@
 		</h:outputLink>
 		する。
 	</span>
-	</h:panelGroup>
-	<h:panelGroup rendered="#{PubManSessionBean.locale =='ja'}">
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='ja'}">
 	<span class="full_area0 ">
-	<br/>
+		<br/>
 		<h2>
 			ヘルプ、追加情報
 		</h2>
 		<b>紹介ビデオ</b>
 		<ul>
-			<li><a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">データの登録方法</a></li>
-			<li><a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">登録一覧・管理画面の使い方</a></li>
+			<li>
+				<a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">データの登録方法</a>
+			</li>
+			<li>
+				<a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">登録一覧・管理画面の使い方</a>
+			</li>
 		</ul>
 	</span>
-	</h:panelGroup>
+</h:panelGroup>
+
+<!-- HOMEPAGE SPANISH VERSION -->
+<h:panelGroup rendered="#{PubManSessionBean.locale =='es'}">
+	<h2>
+		PubMan へようこそ <!-- -<br/>今日は何をしましょうか？ --></h2>
+	<br/>
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='es' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+	<span class="small_area0">
+		<span class="big_imgArea startPageIcon submIcon">&#160;</span>
+	</span>
+	<span class="xDouble_area0">
+		<h2>新規登録</h2>
+		<b>文献資料をPubManへ登録する</b>
+		<br/>
+	   ... 
+		<h:commandLink id="lnkEasySubmission_es" title="#{tlt.submission_lnkEasySubmission}" action="#{EasySubmission.newEasySubmission}">
+			<h:outputText value="#{lbl.Home_Link_EasySub}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+		</h:commandLink>
+		<br/>
+	  ... 
+		<h:commandLink id="lnkImport_es" title="#{tip.submission_lnkImport}" action="#{EasySubmission.newImport}">
+			<h:outputText value="#{lbl.EasySubmission_lblFetchMetadata}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}"/>
+		</h:commandLink>
+		<br/>
+	  ... 
+		<h:commandLink id="lnkNewSubmission_es" title="#{lbl.Home_Link_FullSub}" action="#{CreateItem.newSubmission}" immediate="true">
+			<h:outputText value="#{lbl.submission_lnkNewSubmission}" rendered="#{DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}" />
+		</h:commandLink>
+	</span>
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='es' and LoginHelper.isDepositor and ContextListSessionBean.depositorContextListSize>0}">
+	<span class="small_area0">
+		<span class="big_imgArea startPageIcon myItemsIcon">&#160;</span>
+	</span>
+	<span class="xDouble_area0">
+		<br/>
+		<h2>登録資料一覧</h2>
+		...登録一覧から自身の登録分を
+		<h:outputLink id="lnkSpanish1" value="#{ApplicationBean.appContext}DepositorWSPage.jsp">
+			<h:outputText value="確認もしくは登録完了する"/>
+		</h:outputLink>。
+		登録済みで未公開状態の資料を公開する。
+	</span>
+</h:panelGroup>
+	
+<h:panelGroup rendered="#{PubManSessionBean.locale =='es' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
+	<span class="small_area0">
+		<span class="big_imgArea startPageIcon qaWSIcon">&#160;</span>
+	</span>
+	<span class="xDouble_area0">
+		<br/>
+		<h2>管理画面</h2>
+		... 登録資料の
+		<h:outputLink id="lnkSpanish2" value="#{ApplicationBean.appContext}QAWSPage.jsp">
+			<h:outputText value="内容確認もしくは修正"/>
+		</h:outputLink>
+		する。
+	</span>
+</h:panelGroup>
+<h:panelGroup rendered="#{PubManSessionBean.locale =='es'}">
+	<span class="full_area0 ">
+		<br/>
+		<h2>
+			ヘルプ、追加情報
+		</h2>
+		<b>紹介ビデオ</b>
+		<ul>
+			<li>
+				<a href=" http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-how-to-submit-publications-to-pubman/" target="_blank">データの登録方法</a>
+			</li>
+			<li>
+				<a href="http://pubman.blogs.mpdl.mpg.de/2009/06/04/new-videos-out-on-pubman-user-workspaces/" target="_blank">登録一覧・管理画面の使い方</a>
+			</li>
+		</ul>
+	</span>
+</h:panelGroup>
