Line Spacing corrected
Former-commit-id: 0fec8ce7368c6ed8e31c00a4b037563df455d0c4

--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/infoPage.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/infoPage.css
@@ -72,6 +72,7 @@
 
 .infoPage h2, .infoPage .mainSection h2, .infoPage .sideSection h2{
 	font-size: 150%;
+	line-height: 130%;
 	margin: 0px;
 	padding-top: 0.28em;
 	margin-left: -0.74em;
