--- a/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
@@ -137,6 +137,7 @@
 							<h:inputText id="inpcreator_persons_person_family_name_optional" readonly="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" styleClass="large_txtInput personSuggest familyName" value="#{creator.person.familyName}" rendered="#{!(genre.sources_source_person_organization_source_persons_person_family_name_display == 'false' && genre.sources_source_person_organization_source_persons_person_family_name_form_id == 'full-submission' || genre.sources_source_person_organization_source_persons_person_family_name_display == 'false' && genre.sources_source_person_organization_source_persons_person_family_name_form_id == 'all')}"/>
 							<h:inputText id="inppersons_person_given_name_optional" readonly="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" styleClass="large_txtInput givenName" value="#{creator.person.givenName}"/>
 							<h:inputText id="inpcreator_hidden_organizations" styleClass="noDisplay organizationPasteField" value="#{creator.autoPasteValue}"/>
+							<tr:commandButton id="btnAddCreatorOrganization" styleClass="noDisplay hiddenButtonPasteOrganizations" action="#{creator.addOrganization}"/>
 							<h:inputText id="inppersons_person_ous_optional" styleClass="xSmall_txtInput ouNumber" value="#{creator.ouNumbers}"/>
 							<h:inputText id="inppersons_identifier" styleClass="noDisplay personIdentifier" value="#{creator.person.identifier.id}"/>
 							<h:outputLink styleClass="small_area0 authorCard authorLink" value="#{creator.person.identifier.id}" rendered="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" target="_blank">&nbsp;</h:outputLink>
@@ -170,8 +171,7 @@
 					</h:panelGroup>
 				</tr:iterator>
 				<span class="large_area0 clear">&nbsp;</span>				
-				<h:commandButton styleClass="noDisplay hiddenButtonPasteOrganizations" action="#{EditItemSessionBean.readPastedOrganizations}"/>
-				
+
 				<!-- Creator Organizations - Headline -->
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.sources_source_person_organization_source_persons_display == 'false' && genre.sources_source_person_organization_source_persons_form_id == 'full-submission' || genre.sources_source_person_organization_source_persons_display == 'false' && genre.sources_source_person_organization_source_persons_form_id == 'all')}">
 					<span class="large_area0 clear">&nbsp;</span>
