--- a/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByPage.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByPage.jspf
@@ -126,12 +126,12 @@
 			<tr:iterator var="year" id="yearIter" value="#{BrowseBySessionBean.browseByYears}" binding="#{BrowseByPage.yearIterator}" varStatus="index" rows="0" >
 				<div class="small_area0 noTopBorder">
 					<h:panelGroup styleClass="free_area0 xTiny_marginLExcl" rendered="#{BrowseBySessionBean.dateType == 'published'}">						
-						<h:outputLink id="searchYearPublished" value="#{BrowseByPage.searchUrl}cql=(+(+#{BrowseByPage.pubYearSearchIndex}>%3D%22#{year}%22++and+(+#{BrowseByPage.pubYearSearchIndex}%3C%3D%22#{year}\-12\-31%22+)+)++or++(+#{BrowseByPage.pubOnlineYearSearchIndex}%3D%22#{year}%22+++and+(+#{BrowseByPage.pubOnlineYearSearchIndex}%3C%3D%22#{year}\-12\-31%22+)+)++and++(+escidoc.objecttype%3D%22item%22+)+and++(+escidoc.content-model.objid%3D%22#{BrowseBySessionBean.pubContentModel}%22+)+)">								
+						<h:outputLink id="searchYearPublished" value="#{BrowseByPage.searchUrl}cql=#{BrowseByPage.pubYearSearchIndex}%3D%22#{year}*%22++and++escidoc.objecttype%3D%22item%22+and++escidoc.content-model.objid%3D%22#{BrowseBySessionBean.pubContentModel}%22">								
 							<h:outputText value="#{year}"/>
 						</h:outputLink>									
 					</h:panelGroup>		
 					<h:panelGroup styleClass="free_area0 xTiny_marginLExcl" rendered="#{BrowseBySessionBean.dateType == 'any'}">						
-						<h:outputLink id="searchYearAny" value="#{BrowseByPage.searchUrl}cql=(+(+#{BrowseByPage.anyYearSearchIndex}>%3D%22#{year}%22++and+(+#{BrowseByPage.anyYearSearchIndex}%3C%3D%22#{year}\-12\-31%22+)+)++and++(+escidoc.objecttype%3D%22item%22+)+and++(+escidoc.content-model.objid%3D%22#{BrowseBySessionBean.pubContentModel}%22+)+)">								
+						<h:outputLink id="searchYearAny" value="#{BrowseByPage.searchUrl}cql=escidoc.publication.compound.dates%3D%22#{year}*%22++and++escidoc.objecttype%3D%22item%22+and++escidoc.content-model.objid%3D%22#{BrowseBySessionBean.pubContentModel}%22">								
 							<h:outputText value="#{year}"/>
 						</h:outputLink>									
 					</h:panelGroup>		
